[package]
name = "tracing-slog"
version = "0.2.0"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
edition = "2021"
repository = "https://github.com/ecliptical/tracing-slog"
description = """
Provides compatibility between `tracing` and the `slog` crate.
Use when a library uses `slog` but your application uses `tracing`.
"""
categories = [
    "development-tools::debugging",
    "asynchronous",
]
keywords = ["logging", "tracing", "slog"]
license = "MIT"
readme = "README.md"
rust-version = "1.56"

[features]
default = ["std", "kv"]
std = ["slog/std"]
# Enables serialization of slog key-value pairs to a constructed field, `slog.fields`
kv = []

[dependencies]
once_cell = "1.16"
slog = "2.7"
tracing-core = "0.1"

[dev-dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"] }
tracing-test = "0.2"
