[package]
name = "tracing-slog"
version = "0.4.0"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
edition = "2021"
repository = "https://github.com/ecliptical/tracing-slog"
description = """
Provides compatibility between `tracing` and the `slog` crate.
Use when a library uses `slog` but your application uses `tracing`.
"""
categories = [
    "development-tools::debugging",
    "asynchronous",
]
keywords = ["logging", "tracing", "slog"]
license = "MIT"
readme = "README.md"
rust-version = "1.65"

[features]
default = ["std"]
std = ["slog/std", "once_cell/std", "tracing-core/std"]
# Enables serialization of slog key-value pairs to a constructed field, `slog.kv`
kv = []

[dependencies]
once_cell = { version = "1", default-features = false }
slog = { version = "2.8", default-features = false }
tracing-core = { version = "0.1", default-features = false }

[dev-dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"] }
tracing-test = "0.2"
